# 08_WiFi_MQTT_ALIYUN

./: .gitignore  CMakeLists.txt  MONITORING_LOGS.md  OPTIMIZATION_REPORT.md  rootCA.srl  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/FIRMWARE_STORAGE/: CMakeLists.txt  Kconfig.projbuild  firmware_storage.c  firmware_storage_priv.h
components/BSP/FIRMWARE_STORAGE/include/: firmware_storage.h  firmware_storage_types.h
components/BSP/JSONPRO/: json_processor.c  json_processor.h
components/BSP/OBS/: obs_http.c  obs_http.h
components/BSP/SDIO/: spi_sdcard.c
components/BSP/SPIFFS/: storage_manager.c  storage_manager.h
components/BSP/WEB/: web_pages.h  web_server.c  web_server.h  web_wifi.c  web_wifi.h
components/certs/: CMakeLists.txt  huaweicloud-iot-root-ca-list.pem
main/: main.c
main/APP/: huawei_ota.c  huawei_ota.h  lwip_demo.c  lwip_demo.h  tud_flash.c  tud_flash.h  wifi_config.c  wifi_config.h
partition_table/: partitionTable.csv
